[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "mc-pricer"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0,<3",
    "scipy>=1.13,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0,<10",
    "matplotlib>=3.9,<4",
    "streamlit>=1.35,<2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
